--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -18,13 +18,13 @@
   &-pinned {
     color: $default-tint;
     font-family: $serif-secondary;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
   }
 
   &-time {
     color: $default-tint;
     font-family: $serif-secondary;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
   }
 
   &-title {
@@ -33,12 +33,12 @@
     font-family: $sans-serif;
     font-size: 2rem;
     font-weight: 700;
-    margin: .5rem 0;
+    margin: 0.5rem 0;
   }
 
   &-line {
-    @include transition(all .3s ease-out);
-    border-top: .2rem solid $default-shade;
+    @include transition(all 0.3s ease-out);
+    border-top: 0.2rem solid $default-shade;
     display: block;
     width: 2rem;
   }
