--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,9 +9,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon-32x32.png" | relative_url }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicon-16x16.png" | relative_url }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/apple-touch-icon.png" | relative_url }}">
+  <link rel="shortcut icon" href="{{ "/assets/images/favicons/favicon.ico" | relative_url }}" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/images/favicons/favicon-16x16.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/images/favicons/favicon-16x16.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/images/favicons/apple-touch-icon.png" | relative_url }}">
 
   <!-- RSS -->
   {% feed_meta %}
